helm/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: INSERT-INGRESS-NAME-HERE
  namespace: INSERT-NAMESPACE-HERE
spec:
  ingressClassName: nginx
  rules:
    - host: DOMAIN-NAME.DOMAIN.COM
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: INSERT-SERVICE-NAME-HERE
              port:
                number: 80

  tls:
    - hosts:
      - DOMAIN-NAME.DOMAIN.COM
      secretName: INSERT-SECRETNAME-HERE
